created header section, and base concept of website

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,9 +4,78 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack Template</title>
+    <title>Tinyone</title>
+
   </head>
   <body>
-    dgg
+    <header class="header-section">
+      <div class="container">
+        <div class="row">
+          <div class="header__logo logo col-xl-3">
+            <img src="/assets/img/logo.png" alt="logo">
+          </div>
+          <nav class="header-section__navigation navigation ml-auto col-lg-5">
+            <ul class="navigation__block ">
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  Features
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  Support
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  Blog
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="row mt-30">
+          <div class="header-section__main-info-block col-xl-5 ">
+              <h3 class="header-section__main-info-title">
+                Inspare your inspiration
+              </h3>
+              <p class="header-section__main-info-desc header-section__main-info-desc_important">
+                Simple to use for your app,products showcase and your inspiration
+              </p>
+              <p class="header-section__main-info-desc">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur est sequi nesciunt amet. Provident eum rerum fugiat et libero. Ea?
+              </p>
+              <ul class="header-section__main-info-platforms">
+                <li class="header-section__main-info-platforms-item">
+                  1
+                </li>
+                <li class="header-section__main-info-platforms-item">
+                  2
+                </li>
+                <li class="header-section__main-info-platforms-item">
+                  3
+                </li>
+              </ul>
+          </div>
+          <figure class="header-section__main-info-img col-xl-5  offset-xl-2 col-lg-12">
+            <img src="/assets/img/ipad-new.png" alt="ipad">
+          </figure> 
+        </div>
+      </div>
+    </header>
+    <section class="features-section">
+      <div class="container">
+      </div>
+    </section>
+    <section class="contact-section">
+      <div class="container">
+        
+      </div>
+    </section>
+    <footer class="footer-section">
+      <div class="container">
+        
+      </div>
+    </footer>
   </body>
 </html>
