all sections was done

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -65,17 +65,132 @@
     </header>
     <section class="features-section">
       <div class="container">
+        <div class="col-xl-12 box">
+          <h2 class="title features-section__title">
+            Tinyone features
+          </h2>
+          <p class="features-section__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, possimus recusandae dignissimos sapiente atque quia?
+          </p>
+        </div>
+        <div class="row">
+            <div class="features-section__card col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
+              <div class="features-section__card-icon">
+
+              </div>
+              <div class="box">
+                <div class="features-section__card-title">
+                  <h4 class="title">
+                    Fully Responsive
+                  </h4>
+                </div>
+                <div class="features-section__card-description">
+                 Lorem ipsum dolor sit, amet <br> consectetur adipisicing elit. <br> Illo illum omnis sint alias.
+                </div>
+              </div>
+            </div>
+            <div class="features-section__card  col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
+              <div class="features-section__card-icon">
+
+              </div>
+              <div class="box">
+                <div class="features-section__card-title">
+                  <h4 class="title">
+                    Fully Responsive
+                  </h4>
+                </div>
+                <div class="features-section__card-description">
+                 Lorem ipsum dolor sit, amet <br> consectetur adipisicing elit. <br> Illo illum omnis sint alias.
+                </div>
+              </div>
+            </div>
+            <div class="features-section__card col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
+              <div class="features-section__card-icon">
+
+              </div>
+              <div class="box">
+                <div class="features-section__card-title">
+                  <h4 class="title">
+                    Fully Responsive
+                  </h4>
+                </div>
+                <div class="features-section__card-description">
+                 Lorem ipsum dolor sit, amet <br> consectetur adipisicing elit. <br> Illo illum omnis sint alias.
+                </div>
+              </div>
+            </div>
+            <div class="features-section__card features-section__card_bottom col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
+              <div class="features-section__card-icon">
+
+              </div>
+              <div class="box">
+                <div class="features-section__card-title">
+                  <h4 class="title">
+                    Fully Responsive
+                  </h4>
+                </div>
+                <div class="features-section__card-description">
+                 Lorem ipsum dolor sit, amet <br> consectetur adipisicing elit. <br> Illo illum omnis sint alias.
+                </div>
+              </div>
+            </div>
+            <div class="features-section__card features-section__card_bottom col-xl-4 col-lg-4 col-md-6 col-sm-6  ">
+              <div class="features-section__card-icon">
+
+              </div>
+              <div class="box">
+                <div class="features-section__card-title ">
+                  <h4 class="title">
+                    Fully Responsive
+                  </h4>
+                </div>
+                <div class="features-section__card-description">
+                 Lorem ipsum dolor sit, amet <br> consectetur adipisicing elit. <br> Illo illum omnis sint alias.
+                </div>
+              </div>
+            </div>
+            <div class="features-section__card features-section__card_bottom col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
+              <div class="features-section__card-icon">
+
+              </div>
+              <div class="box">
+                <div class="features-section__card-title">
+                  <h4 class="title">
+                    Fully Responsive
+                  </h4>
+                </div>
+                <div class="features-section__card-description">
+                 Lorem ipsum dolor sit, amet <br> consectetur adipisicing elit. <br> Illo illum omnis sint alias.
+                </div>
+              </div>
+            </div>
+        </div>
       </div>
     </section>
     <section class="contact-section">
       <div class="container">
-        
+        <div class="row">
+          <h3 class="title contact-section__title col-xl-12">
+            Keep in touch with us
+          </h3>
+          <p class="contact-section__description col-xl-10">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum laudantium eligendi placeat, provident dolorum autem iusto. Cumque, magnam? Quaerat.
+          </p>
+          <div class=" contact-section__input-box col-xl-10">
+            <input type="text" class="contact-section__input-control" placeholder="Enter your email to update">
+            <div class="contact-section__btn-submit">
+              Submit
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <footer class="footer-section">
-      <div class="container">
-        
-      </div>
+      <p class="footer-section__info">
+        HALOVIETNAM LTD <br>
+        66, Dang Van ngu, Dong Da <br>
+        Hanoi, Vietnam <br>
+      </p>
     </footer>
   </body>
 </html>
