--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,17 +17,17 @@
           <nav class="header-section__navigation navigation ml-auto col-lg-5">
             <ul class="navigation__block ">
               <li class="navigation__item">
-                <a href="" class="navigation__link">
+                <a href="#" class="navigation__link">
                   Features
                 </a>
               </li>
               <li class="navigation__item">
-                <a href="" class="navigation__link">
+                <a href="#" class="navigation__link">
                   Support
                 </a>
               </li>
               <li class="navigation__item">
-                <a href="" class="navigation__link">
+                <a href="#" class="navigation__link">
                   Blog
                 </a>
               </li>
